change tables expenses

--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
 	"development": {
 		"username": "root",
-		"password": "Bh@99090",
+		"password": "155450",
 		"database": "storecontrol",
 		"host": "localhost",
 		"dialect": "mysql"
